2004-10-14  Jody Goldberg <jody@gnome.org>

	* Release 2.8.1

2004-09-01  Sergey V. Udaltsov <svu@gnome.org>

	* The default switchcut (Alt*2) is introduced

2004-08-20  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* gnome-keyboard-properties.c: (main):
	Use themed icon for WM hint.

2004-07-28  Richard Hult  <richard@imendio.com>

	* gnome-keyboard-properties.c (main): Switch to the right page for
	typing monitor preferences.

2004-07-27  Sergey V. Udaltsov <svu@gnome.org>

	* The preview is separated to another window. 
	Looks nicer IMHO - but it depends on POV.

2004-07-26  Sergey V. Udaltsov <svu@gnome.org>

	* Now models are handled using the popup window. 
	Looks a bit more polished.

2004-07-22  Christian Neumair  <chris@gnome-de.org>

	* gnome-keyboard-properties.glade: Use GTK_SHADOW_IN shadow for
	all treeviews (consistency). Fixes #144050.

2004-07-14  Sergey V. Udaltsov <svu@gnome.org>

	* Merged the preview tab branch.

2004-04-15  Jody Goldberg <jody@gnome.org>

	* Release 2.6.1

2004-04-01  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.3

2004-03-30  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0.1

2004-03-23  Jody Goldberg <jody@gnome.org>

	* Release 2.6.0

2004-03-11  Jody Goldberg <jody@gnome.org>

	* Release 2.5.4

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* gnome-keyboard-properties.c: (dialog_response): Update help link
	to point to user-guide.xml

2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2004-01-11  Richard Hult  <richard@imendio.com>

	* gnome-keyboard-properties.glade:
	* gnome-keyboard-properties.c (setup_dialog): Enable markup for
	the break enabled toggle with code instead of with a custom child
	for the toggle since that doesn't work with new libglade. Fixes
	bug #131122.

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-10-28  Jody Goldberg <jody@gnome.org>
