@@ -1,3 +1,8 @@
+2004-10-15  Sergey V. Udaltsov <svu@gnome.org>
+
+	* The preview is now dialog instead of window. More consistent
+	behaviour. Fixing #154358
+
 2004-10-14  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.8.1
